Changes in Kitchensink

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -9,18 +9,22 @@
         <ul>
             <!-- Basic Layout -->
             <li class="active" data-view-article="main-article" data-title="Lungo Framework">
-                <strong>Meet the framework</strong>
+                <a href="#">
+                    <strong>Meet the framework</strong>
+                </a>
             </li>
 
             <!-- Layout & Navigation -->
             <li data-view-section="layout" data-async="app/sections/layout.html">
-                <strong>Layout</strong>
-                <div class="tag right">5</div>
+                <a href="#">
+                    <strong>Layout</strong>
+                    <div class="tag right">5</div>
+                </a>
             </li>
 
             <!-- List -->
             <li>
-                <a href="#list" data-router="section" data-async="app/sections/list.html">
+                <a href="#" data-view-article="list" data-async="app/articles/list.html">
                     <strong>Lists</strong>
                     <div class="tag right">22</div>
                 </a>
@@ -28,7 +32,7 @@
 
             <!-- Forms -->
             <li>
-                <a href="#form" data-router="section" data-async="app/sections/form.html">
+                <a href="#" data-view-section="form" data-async="app/sections/form.html">
                     <div class="tag right">8</div>
                     <strong>Form Elements</strong>
                 </a>
@@ -36,7 +40,7 @@
 
             <!-- Asides -->
             <li>
-                <a href="#aside" data-router="section" data-async="app/sections/aside.html">
+                <a href="#" data-view-section="aside" data-async="app/sections/aside.html">
                     <div class="tag right">8</div>
                     <strong>Asides</strong>
                 </a>
@@ -44,7 +48,7 @@
 
             <!-- Menu -->
             <li>
-                <a href="#menu" data-router="section" data-async="app/sections/menu.html">
+                <a href="#" data-view-section="menu" data-async="app/sections/menu.html">
                     <div class="tag right">1</div>
                     <strong>Menu</strong>
                 </a>
@@ -52,7 +56,7 @@
 
             <!-- Data-Attributes -->
             <li>
-                <a href="#data" data-router="section" data-async="app/sections/data-attribute.html">
+                <a href="#" data-view-article="data" data-async="app/articles/data.html">
                     <div class="tag right">9</div>
                     <strong>Data-attributes</strong>
                 </a>
@@ -60,7 +64,7 @@
 
             <!-- Icons -->
             <li>
-                <a href="#icon" data-router="section" data-async="app/sections/icon.html">
+                <a href="#" data-view-article="icons" data-async="app/articles/icon.html">
                     <div class="tag right">109</div>
                     <strong>Icons</strong>
                 </a>
@@ -76,25 +80,23 @@
 
             <!-- Touch Events -->
             <li>
-                <a href="#touchevents" data-router="section">
+                <a href="#" data-view-article="touchevents" data-async="app/articles/touchevents.html">
                     <div class="tag right">19</div>
                     <strong>Touch Events</strong>
                 </a>
             </li>
 
             <!-- Layout Events -->
-            <!--
             <li>
-                <a href="#layoutevents" data-router="section" data-async="app/sections/layoutevents.html">
+                <a href="#" data-view-section="layoutevents" data-async="app/sections/layoutevents.html">
                     <div class="tag right">2</div>
                     <strong>Layout Events</strong>
                 </a>
             </li>
-            -->
 
             <!-- Notifications -->
             <li>
-                <a href="#notification" data-router="section">
+                <a href="#" data-view-article="notification" data-async="app/articles/notification.html">
                     <div class="tag right">8</div>
                     <strong>Notifications</strong>
                 </a>
@@ -102,7 +104,7 @@
 
             <!-- Pull & Refresh -->
             <li>
-                <a href="#pull" data-router="section" >
+                <a href="#" data-view-section="pull" data-async="app/sections/pull.html">
                     <div class="tag right">1</div>
                     <strong>Pull & Refresh</strong>
                 </a>
@@ -110,7 +112,7 @@
 
             <!-- Carousel -->
             <li>
-                <a href="#carousel" data-router="section" >
+                <a href="#" data-view-section="carousel" data-async="app/sections/carousel.html">
                     <div class="tag right">1</div>
                     <strong>Carousel</strong>
                 </a>
@@ -118,7 +120,7 @@
 
             <!-- Environment -->
             <li>
-                <a href="#environment" data-router="article" data-title="Environment">
+                <a href="#" data-view-article="environment" data-async="app/articles/environment.html">
                     <div class="tag right">1</div>
                     <strong>Environment</strong>
                 </a>
@@ -126,7 +128,7 @@
 
             <!-- Buttons & Colours -->
             <li>
-                <a href="#color" data-router="section" data-async="app/sections/color.html">
+                <a href="#" data-view-article="buttons" data-async="app/articles/buttons.html">
                     <div class="tag right">14</div>
                     <strong>Buttons & Colours</strong>
                 </a>
@@ -134,7 +136,7 @@
 
             <!-- Theme roller -->
             <li>
-                <a href="#themeroller" data-router="section" data-async="app/sections/themeroller.html">
+                <a href="#" data-view-article="themeroller" data-async="app/articles/theme.html">
                     <div class="tag right">4</div>
                     <strong>Theme roller</strong>
                 </a>
@@ -142,7 +144,7 @@
 
             <!-- Grid System -->
             <li>
-                <a href="#grid" data-router="section" data-async="app/sections/grid.html">
+                <a href="#" data-view-article="grid" data-async="app/articles/grid.html">
                     <strong>Grid System</strong>
                 </a>
             </li>
