--- a/example/app/sections/layout.html
+++ b/example/app/sections/layout.html
@@ -1,11 +1,11 @@
 <section id="layout" data-transition="slide">
     <header data-title="Layout" class="extended" data-back="home">
         <nav class="right">
-            <a href="#" data-view-section="splash" data-async="app/sections/splash.html" data-icon="lock" class="button"></a>
+            <button data-view-section="splash" data-async="app/sections/splash.html" data-label="splash"></button>
         </nav>
     </header>
 
-    <nav class="groupbar">
+    <nav data-control="groupbar">
         <a href="#" data-view-article="layout-art1" data-label="Profile" class="active"></a>
         <a href="#" data-view-article="layout-art2" data-label="Inbox" data-count="19"></a>
         <a href="#" data-view-article="layout-art3" data-label="Map"></a>
