--- a/example/app/sections/menu.html
+++ b/example/app/sections/menu.html
@@ -1,19 +1,30 @@
 <section id="menu" data-transition="slide">
     <header data-title="data-control=menu">
-        <nav class="left">
-            <a href="#options" data-router="menu" data-icon="map"></a>
+        <nav>
+            <a href="#" data-view-menu="options" data-icon="map"></a>
+        </nav>
+        <nav class="right">
+            <a href="#" data-view-menu="options-icons" data-icon="map"></a>
         </nav>
     </header>
 
     <nav id="options" data-control="menu">
-        <a href="#home-menu" data-router="article" data-icon="map">Home</a>
-        <a href="#explore-menu" data-router="article" data-icon="eye">Explore</a>
-        <a href="#activity-menu" data-router="article" data-icon="chat">Activity</a>
-        <a href="#profile-menu" data-router="article" data-icon="user">Profile</a>
-        <a href="#back" data-router="section" data-icon="home">Return</a>
+        <a href="#" data-view-article="home-menu" data-icon="map">Home</a>
+        <a href="#" data-view-article="explore-menu" data-icon="eye">Explore</a>
+        <a href="#" data-view-article="activity-menu" data-icon="chat">Activity</a>
+        <a href="#" data-view-article="profile-menu" data-icon="user">Profile</a>
+        <a href="#" data-view-section="back" data-icon="left">Return</a>
     </nav>
 
-    <article id="home-menu" class="active indented">
+    <nav id="options-icons" data-control="menu" class="icons">
+        <a href="#" data-view-article="home-menu" data-icon="map">Home</a>
+        <a href="#" data-view-article="explore-menu" data-icon="eye">Explore</a>
+        <a href="#" data-view-article="activity-menu" data-icon="chat">Activity</a>
+        <a href="#" data-view-article="profile-menu" data-icon="user">Profile</a>
+        <a href="#" data-view-section="back" data-icon="left">Return</a>
+    </nav>
+
+    <article id="home-menu" class="indented">
         Home
     </article>
     <article id="explore-menu" class="indented">
@@ -25,4 +36,5 @@
     <article id="profile-menu" class="indented">
         Profile
     </article>
+
 </section>
