--- a/example/app/sections/pull.html
+++ b/example/app/sections/pull.html
@@ -1,9 +1,5 @@
 <section id="pull" data-pull="normal" data-transition="slide">
-    <header data-title="Pull & Refresh">
-        <nav>
-            <a href="#back" data-router="section" data-icon="home"></a>
-        </nav>
-    </header>
+    <header data-title="Pull & Refresh" data-back="home"></header>
 
     <article class="active list indented">
         <ul>
@@ -30,7 +26,6 @@
                 Is known that create apps for each platform is expensive, this situation is increased by the arrival of tablets and SmartTVs. Lungo will suit all of them creating a unique and amazing UX.
             </li>
         </ul>
-
     </article>
 
 </section>
