--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -46,7 +46,7 @@
             </nav>
         </header>
 
-        <nav id="options" data-control="menu" class="iconss ">
+        <nav id="options" data-control="menu" class="icons">
             <a href="#" data-view-article="folks" data-icon="users" data-title="Folks">Folks</a>
             <a href="#" data-view-article="products" data-icon="eye" data-title="Explore">Explore</a>
             <a href="#" data-view-article="article" data-icon="chat">Activity</a>
