--- a/example/app/sections/aside.html
+++ b/example/app/sections/aside.html
@@ -1,13 +1,13 @@
 <section id="aside" data-transition="slide">
-    <header data-title="Asides">
-        <nav>
-            <a href="#back" data-router="section" data-icon="home"></a>
+    <header data-title="Asides" data-back="home">
+        <nav class="right">
+            <a href="#" data-view="aside" data-async="app/asides/left.html" data-icon="left" class="button anchor blue">Example of normal aside</a>
+            <a href="#" data-router="aside" data-async="app/asides/right.html" data-icon="right" class="button anchor red">Example of mini right aside</a>
         </nav>
     </header>
     <article id="aside-example" class="active indented">
         <div>
-            <a href="#left" data-router="aside" data-async="app/asides/left.html" data-icon="left" class="button anchor blue">Example of normal aside</a>
-            <a href="#right" data-router="aside" data-async="app/asides/right.html" data-icon="right" class="button anchor red">Example of mini right aside</a>
+
         </div>
     </article>
 </section>
