--- a/example/app/sections/carousel.html
+++ b/example/app/sections/carousel.html
@@ -1,8 +1,5 @@
 <section id="carousel" data-transition="slide">
-    <header>
-        <nav>
-            <a href="#back" data-router="section" data-icon="home"></a>
-        </nav>
+    <header data-back="home">
         <div class="centered title">Photo Nº<span>1</span></div>
 
         <nav class="right">
