--- a/example/app/sections/list.html
+++ b/example/app/sections/list.html
@@ -1,9 +1,5 @@
 <section id="list" data-transition="slide">
-    <header data-title="Lists" class="extended">
-        <nav>
-            <a href="#" data-view-section="back" data-icon="home"></a>
-        </nav>
-    </header>
+    <header data-title="Lists" class="extended"  data-back="home"></header>
 
     <nav class="groupbar">
         <a href="#" data-view-article="list-normal" class="active" data-icon="checkmark" data-label="Normal"></a>
