--- a/example/app/sections/scroll.html
+++ b/example/app/sections/scroll.html
@@ -1,13 +1,9 @@
 <section id="scroll" data-transition="slide">
-    <header data-title="Scrolls">
-        <nav>
-            <a href="#back" data-router="section" data-icon="home"></a>
-        </nav>
-    </header>
+    <header data-title="Scrolls"  data-back="home"></header>
 
     <article class="active">
         <h1 class="one row ">.scroll stylesheet class</h1>
-        <ul class=" four row scroll anchor">
+        <ul class="four row scroll anchor">
             <img src="http://lorempixel.com/256/128/food/">
             <img src="http://lorempixel.com/256/128/sports/">
             <img src="http://lorempixel.com/256/128/people/">
