data-article for multiple articles (in current section)

--- a/example/flexbox.html
+++ b/example/flexbox.html
@@ -144,7 +144,7 @@
     </section>
 
 
-    <section id='folk' data-transition="slide" data-aside="features">
+    <section id='folk' data-transition="slide" data-aside="features" data-children="x">
         <header data-title='Javi Jimenez'>
             <nav>
                 <a href="#" data-view-section="back" data-label="Back" class="button"></a>
@@ -271,7 +271,7 @@
         Lungo.init({
             name: 'Flexbox',
             version: '2.2',
-            history: false
+            history: true
             //,
             // resources: ['app/sections/list.html']
         });
