--- a/example/index.html
+++ b/example/index.html
@@ -69,6 +69,17 @@
             </nav>
         </header>
 
+        <nav data-control="groupbar" data-article="icons icons-brands">
+            <a href="#" data-view-article="icons" data-label="Normal" data-count="72"></a>
+            <a href="#" data-view-article="icons-brands" data-label="Brands" data-count="37" data-async="app/articles/icon-brand.html" ></a>
+        </nav>
+
+        <nav data-control="groupbar" data-article="list list-indented list-examples">
+            <a href="#" data-view-article="list" data-icon="checkmark" data-label="Normal"></a>
+            <a href="#" data-view-article="list-indented" data-label="Indented"></a>
+            <a href="#" data-view-article="list-examples" data-label="Examples"></a>
+        </nav>
+
         <article id="main-article" class="list indented scroll">
             <ul>
                 <li class="dark">
