New aside behavior (.right.aside)

--- a/example/app/asides/features.html
+++ b/example/app/asides/features.html
@@ -1,4 +1,4 @@
-<aside id="features" class="left">
+<aside id="features">
     <header data-title="Features">
         <nav class="right">
             <a href="#" class="buttons" data-icon="settings"></a>
@@ -32,13 +32,12 @@
 
             <!-- Asides -->
             <li data-view-section="aside" data-async="app/sections/aside.html">
-                <div class="tag right">8</div>
-                <strong>Asides</strong>
+                <strong>Aside</strong>
             </li>
 
             <!-- Menu -->
             <li data-view-section="menu" data-async="app/sections/menu.html">
-                <div class="tag right">1</div>
+                <div class="tag right">2</div>
                 <strong>Menu</strong>
             </li>
 
