--- a/example/app/asides/right.html
+++ b/example/app/asides/right.html
@@ -1,7 +1,11 @@
-<aside id="right" class="right small">
-    <nav>
-        <a href="#aside-example" data-router="article" class="active" data-icon="clock"></a>
-        <a href="#aside-example" data-router="article" data-icon="user" data-count="14"></a>
-        <a href="#aside-example" data-router="article" data-icon="pushpin"></a>
-    </nav>
+<aside id="right" class="right">
+    <header data-title="Example of Aside"></header>
+    <article class="list active">
+        <ul>
+            <li data-view-aside="right" data-icon="user">
+                <strong>Tap to close</strong>
+                <small>Lorem ipsum dolor sit amet.</small>
+            </li>
+        </ul>
+    </article>
 </aside>
