--- a/example/app/sections/aside.html
+++ b/example/app/sections/aside.html
@@ -1,13 +1,8 @@
-<section id="aside" data-transition="slide">
+<section id="aside" data-transition="slide" data-aside="right">
     <header data-title="Asides" data-back="home">
         <nav class="right">
-            <a href="#" data-view="aside" data-async="app/asides/left.html" data-icon="left" class="button anchor blue">Example of normal aside</a>
-            <a href="#" data-router="aside" data-async="app/asides/right.html" data-icon="right" class="button anchor red">Example of mini right aside</a>
+            <button data-view-aside="right" data-label="Show Aside"></button>
         </nav>
     </header>
-    <article id="aside-example" class="active indented">
-        <div>
-
-        </div>
-    </article>
+    <article id="aside-example"></article>
 </section>
