--- a/example/app/sections/scroll.html
+++ b/example/app/sections/scroll.html
@@ -1,34 +1,34 @@
 <section id="scroll" data-transition="slide">
     <header data-title="Scrolls"  data-back="home"></header>
 
-    <article class="active">
-        <h1 class="one row ">.scroll stylesheet class</h1>
-        <ul class="four row scroll anchor">
-            <img src="http://lorempixel.com/256/128/food/">
-            <img src="http://lorempixel.com/256/128/sports/">
-            <img src="http://lorempixel.com/256/128/people/">
-            <img src="http://lorempixel.com/256/128/technics/">
-            <img src="http://lorempixel.com/256/128/animals/">
-            <img src="http://lorempixel.com/256/128/nightlife/">
-            <img src="http://lorempixel.com/256/128/nature/">
-            <img src="http://lorempixel.com/256/128/transport/">
-            <img src="http://lorempixel.com/256/128/city/">
-            <img src="http://lorempixel.com/256/128/fashion/">
-            <img src="http://lorempixel.com/256/128/abstract/">
+    <article>
+        <h1>.scroll stylesheet class</h1>
+        <ul class="scroll" style="height: 164px;">
+            <img src="http://lorempixel.com/320/164/food/">
+            <img src="http://lorempixel.com/320/164/sports/">
+            <img src="http://lorempixel.com/320/164/people/">
+            <img src="http://lorempixel.com/320/164/technics/">
+            <img src="http://lorempixel.com/320/164/animals/">
+            <img src="http://lorempixel.com/320/164/nightlife/">
+            <img src="http://lorempixel.com/320/164/nature/">
+            <img src="http://lorempixel.com/320/164/transport/">
+            <img src="http://lorempixel.com/320/164/city/">
+            <img src="http://lorempixel.com/320/164/fashion/">
+            <img src="http://lorempixel.com/320/164/abstract/">
         </ul>
-        <h1 class="one row">.horizontal.scroll stylesheet classes</h1>
-        <ul class=" four row horizontal scroll">
-            <img src="http://lorempixel.com/256/128/food/">
-            <img src="http://lorempixel.com/256/128/sports/">
-            <img src="http://lorempixel.com/256/128/people/">
-            <img src="http://lorempixel.com/256/128/technics/">
-            <img src="http://lorempixel.com/256/128/animals/">
-            <img src="http://lorempixel.com/256/128/nightlife/">
-            <img src="http://lorempixel.com/256/128/nature/">
-            <img src="http://lorempixel.com/256/128/transport/">
-            <img src="http://lorempixel.com/256/128/city/">
-            <img src="http://lorempixel.com/256/128/fashion/">
-            <img src="http://lorempixel.com/256/128/abstract/">
+        <h1>.horizontal.scroll stylesheet classes</h1>
+        <ul class="horizontal scroll" style="height: 164px;">
+            <img src="http://lorempixel.com/320/164/food/">
+            <img src="http://lorempixel.com/320/164/sports/">
+            <img src="http://lorempixel.com/320/164/people/">
+            <img src="http://lorempixel.com/320/164/technics/">
+            <img src="http://lorempixel.com/320/164/animals/">
+            <img src="http://lorempixel.com/320/164/nightlife/">
+            <img src="http://lorempixel.com/320/164/nature/">
+            <img src="http://lorempixel.com/320/164/transport/">
+            <img src="http://lorempixel.com/320/164/city/">
+            <img src="http://lorempixel.com/320/164/fashion/">
+            <img src="http://lorempixel.com/320/164/abstract/">
         </ul>
     </article>
 </section>
