--- a/example/index.html
+++ b/example/index.html
@@ -66,6 +66,13 @@
             <img src="http://cdn.tapquo.com/lungo/logo.png" class="title centered">
             <nav class="right">
                 <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article"></a>
+                <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article" data-label="twitter"></a>
+                <a href="#" data-action="twitter" class="button" data-article="main-article" data-label="twitter"></a>
+                <!--
+                <button data-action="twitter" data-icon="brand twitter" data-article="main-article"></button>
+                <button data-action="twitter" data-icon="brand twitter" data-article="main-article" data-label="twitter"></button>
+                <button data-action="twitter" data-article="main-article" data-label="twitter"></button>
+            -->
             </nav>
         </header>
 
